added CharacterDisplayData, HeroRepository, StatsRender, and finished CharacterSelection's display of information
CharacterDisplayData, HeroRepository, StatsRender are used for clean